--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>FinanTrain</title>
 	<link rel="stylesheet" href="./assets/index.css">
+	<script src="./js/index.js"></script>
 </head>
 <body>
 	<header>
@@ -34,7 +35,7 @@
 			</article>
 		</section>
 		<aside>
-			<form >
+			<form onsubmit="return validateForm()" >
 				<h2>Contacto</h2>
 				<p>Ponte en contacto con nosotros para más información:</p>
 				<ul>
@@ -43,7 +44,7 @@
 					<li><strong>Dirección:</strong> 28 Green Tower, New York City, USA</li>
 				</ul>
 				<label for="nombre">Nombre:</label>
-				<input type="text" id="nombre" name="nombre"><br>
+				<input type="text" id="nombre" name="nombre" ><br>
 		
 				<label for="email">Email:</label>
 				<input type="email" id="email" name="email"><br>
